--- a/css/recipe.css
+++ b/css/recipe.css
@@ -14,9 +14,10 @@ h1, h2, h3 {
     text-decoration: underline;
     font-size: 18pt;
     letter-spacing: 0.25em;
+    text-align: left;
 }
 
-h2{
+h1 {
     text-align: center;
     font-weight: bold;
     font-size: 22pt;
